--- a/math/linear_algebra/template.tex
+++ b/math/linear_algebra/template.tex
@@ -6,6 +6,8 @@
 \usepackage{hyperref}       % 目录超链接
 \usepackage{geometry}       % 页面布局
 \usepackage{bm}             % 粗体
+\usepackage{xcolor}         % 颜色
+\usepackage{tabularx}       %表格环境
 \geometry{left=3cm,right=3cm,top=3cm,bottom=3cm}
 
 % =========================
