--- a/english/word/simple-word/markdown/p1-p2.md
+++ b/english/word/simple-word/markdown/p1-p2.md
@@ -3,20 +3,20 @@
 - the
     - 特指: 指代某个特定的，特别的，特殊的对象. Pass me the book. He is the tallest in our classroom.
     - 用于比较级: the 比较级...the 比较级 “越...越...”: The harder you work, the greater progress you will make.
-    - 独指（天地西方普）: the earth, the sun, the Pacific Ocean, the West Lake, the guitar, the piano, on the left, on the south, the Great Wall，the People's Repulic of China
-    - 类指(后加形容词表示一类人)：the young, the old, （加姓氏的复数表示一家人）the Greens
+    - 独指（天地西方普）: the earth, the sun, the Pacific Ocean, the West Lake, the guitar, the piano, on the left, on the
+      south, the Great Wall，the People's Republic of China
+    - 类指(后加形容词表示一类人)：the young, the old, the Greens(加姓氏的复数表示一家人)
     - 固定搭配: by the end, in the end, all the time
 - of
     - A of B: B 的 A
         - the love of a mother.
         - the role of the teacher
 - to
-    - to do: 目的
     - prep. 向，忘；对，给
+    - to do: 目的
     - look forward to 期待
     - devote oneself to 投身于
     - have access to 和...接触
-    - contribute to 贡献于，导致
     - thanks to 多亏了
     - be similar to 和...相似
     - be related to 和...相关
@@ -24,6 +24,7 @@
     - be addicted to 沉溺于
     - do harm to 对...有害
     - lead to 导致
+    - contribute to 贡献于，导致
     - attribute to 归因于
     - stick to 坚持
     - pay attention to 关注
@@ -36,7 +37,7 @@
     - The program has provided enough food and medicine.
     - That means going home for dinner and then working long.
 - in
-    - prep. **在..里面**； adv. 在里面；
+    - prep. **在...里面**； adv. 在里面；
     - prep. => prep. + n.: in the box, in 1989, in Jan, speak in English, write in ink,
     - She was not lacking in courage.
     - adv. => 修饰名词之外的所有成分
@@ -47,7 +48,8 @@
     - aux. v.
         - 构成进行时态 be doing: I am teaching English.
         - 构成被动语态 be done: Keys are used for locking.
-        - 和不定式连用表示将来的安排 be to do: The main purpose([ˈpɜːrpəs] n. 意图，计划) of industry *is to create* wealth.
+        - 和不定式连用表示将来的安排 be to do: The main purpose([ˈpɜːrpəs] n. 意图，计划) of industry *is to create*
+          wealth.
 - that
     - adj.: I like that girl.
     - pron.: I dislike that.
@@ -64,30 +66,32 @@
         - We must finish the task by ourselves.
 - for
     - prep. 为了，给；因为；就...而言；赞成； conj. 因为+句子
-    - He wa tall for an right-year-old.
-    - The Spanish case provides arguments both for and against monar
+    - He wa tall for an eight-year-old.
+    - The Spanish case provides arguments both for and against monarch
     - We listened eagerly, for he brought news of our families.
 - are
 - he
     - pron. 他，不论性别的他
 - you
 - have
-    - vt. **有**；吃，喝；已经；不得不（后接不定式）
+    - vt. **有**；吃，喝；已经；不得不（后接不定式 have to do）
     - aux. v.: I have finished my homework.
     - vt.: I have some homework.
     - have to do 不得不: I have to finish my homework.
-- as: 正如
-    - adv. & prep., 接单词, 作为；像: You need to be able to work as part of a team.
-    - conj. 接句子, 当...时，随着；因为；
+- as
+    - 正如
+    - adv. & prep., 接单词, *作为；像*: You need to be able to work as part of a team.
+    - conj. 接句子, *当...时，随着；因为*；
         - I used to go everywhere with my mother, as I was the youngest.
         - As he got older, his memory got worse.
-- with: 带有，因为
+- with
+    - 带有，因为
     - prep. 和...一起；用，以
-    - 用，以：Mental health allows us to view others with sympathy.
+    - 用，以：Mental health allows us to view others with sympathy([ˈsɪmpəθi] n. 同情).
     - 带有：university men with literature ambitions
     - 因为：I never fell overwhelmed with/for the amount of information my brain absorbs.
 - on
-    - prep. （有接触的）在...上； adv. 向前，继续下去
+    - prep. (有接触的)在...上；adv. 向前，继续下去
     - Mark your answers on ANSWER SHEET1.
     - effects on the environment
     - may wish to move on
@@ -104,16 +108,16 @@
 - this
 - can
     - modal v. 可以；可能； n. 罐子； vt. 罐装
-    - modal v. 
+    - modal v.
         - +动词原型: I can finish my homework.
         - 否定直接在后面加 not: I can not finish my homework.
     - We've only got cans of beef.
 - from
     - prep. 远离，出自:（**远离**）
-        - These range from around $500 to $5000.
-        - protecting it from being defamed
-        - prevent suspects from deleting their phone contents
-        - prohibit suspects from using their mobile phones
+    - These range from around $500 to $5000.
+    - protecting it from being defamed
+    - prevent suspects from deleting their phone contents
+    - prohibit suspects from using their mobile phones
 - more
     - many, much 比较级: These gave banks more freedom.
     - 与多音节单词构成比较级: more famous; more exacting
@@ -134,7 +138,7 @@
     - In spite of(不管；尽管) what happened he never lost the will to live.
     - She willed her eyes to stay open.
 - willing adj. 愿意的、乐意的
-    - Passengers will not <u>ube willing to</u> pay more.
+    - Passengers will not <u>be willing to</u> pay more.
 - do
     - aux. v. Do you love me?
     - 加强语气 I do love you.
@@ -178,13 +182,13 @@
 - should
     - 过去时可以表示委婉的语气
 
-    | 现在时 | 过去时 | 含义 |
-    | ---- | ---- | ----- |
-    | must | 无 | 必须 |
-    | can | could | 可能 |
-    | will | would | 将会/意愿 |
-    | shall | should | 应该 |
-    | may | might | 可能 |
+      | 现在时 | 过去时 | 含义 |
+      | ---- | ---- | ----- |
+      | must | 无 | 必须 |
+      | can | could | 可能 |
+      | will | would | 将会/意愿 |
+      | shall | should | 应该 |
+      | may | might | 可能 |
 
 - there
     - pron. 与 be 连用，表示 “有” be根据临近的n. 单复数选择
@@ -227,14 +231,14 @@
         - in time 及时
         - at the some time 与此同时
         - all the time 总是
-        - by the time 到…时候为止; 等到; 比及
+        - by the time 到...时候为止; 等到; 比及
     - n. 次数、倍数: three times
 - follow
     - vt. 跟随；遵照；领会；理解
     - It is advisable to follow the FSA advice.
     - his power to follow an abstract <u>train of thought想法</u> was very limited
 - write
-    - writer 
+    - writer
 - may
 - year
 - all
@@ -247,7 +251,7 @@
     - Happiness is not a point of future.
     - point to 指向，指明
     - You want to point to where it's useful for employees to go to.
-    - <u>points out</u>（指出） that where are enough people.
+    - <u>points out(指出)</u> that where are enough people.
 - most
     - adj.: Most jobs are multidimensional([ˌmʌltidɪˈmɛnʃənəl] adj. 多面的，多维的)
 - part
@@ -255,34 +259,34 @@
     - v. **(使)分开**: She hated being parted from the children.
     - 词根： 部分，分开
         - depart v. 离开
-        - partial adj. 偏爱的
-        - impartial 公正的
+        - partial [ˈpɑːrʃl] adj. 偏爱的
+        - impartial [ɪmˈpɑːrʃl] adj. 公正的
 - we
 - into
     - go into the room/in the classroom
-- some 某些
-    - adj.: some water, some people
+- some
+    - adj. 某些: some water, some people
     - adv. 大约（往往在数字前边）: some two years
 - many
     - adj. + 可数名词复数: There are many people.
     - pron.: Many of the students have great results.
-    - much 
+    - much
         - adj. + 不可数名词: I have much money.
         - pron.: Much of the air is fresh.
 - read
     - Section II Reading Comprehension.
     - reader
-        - readership: 全体读者
+    - readership: 全体读者
 - they
 - only
     - 我们都坚持下来了，only 李明
 - no
     - no vs not: 名词前用 no，其他词前用 not
-        - not at all 一点也不;没关系 / 不用谢;根本不（语气更强烈）
-        - I have no time.
-        - She is not happy.
-        - I did not like him.
-        - There is no water.
+    - not at all 一点也不;没关系 / 不用谢;根本不（语气更强烈）
+    - I have no time.
+    - She is not happy.
+    - I did not like him.
+    - There is no water.
 - up
     - adv.: 向上，起来
         - put up 举起，张贴，搭建
@@ -304,11 +308,16 @@
     - adv. 在外；完；大声地；出于
         - out of date
         - out of wilderness
-- such 
+- so
+    - adv. 那么，非常；这样，那样； conj. 因而，所以
+    - That's can make the conversation so memorable.
+    - But it did so.
+    - conj.: so I decided that it was not the right path for me.
+- such
     - adj. 这样的，如此的
     - such + n.
     - so + 除了n. 之外的词
-    - so(adv.) vs such(adj.)
+    - **so(adv.)** vs **such(adj.)**
         - such a fool
         - so beautiful
         - so many books
@@ -319,9 +328,5 @@
         - I need to get a cup of tea.
         - I need finish my JDC reciting.
     - n.: The handsome English teacher is my need.
-- so
-    - adv. 那么，非常；这样，那样； conj. 因而，所以
-    - That's can make the conversation so memorable.
-    - But it did so.
-    - conj.: so I decided that it was not the right path for me.
+
 - way
