--- a/english/word/simple-word/markdown/p30-p32.md
+++ b/english/word/simple-word/markdown/p30-p32.md
@@ -314,7 +314,7 @@
         - thereby 位于 and 后面引导 doing；或者位于句尾
             - ...the public and thereby threatening...
         - therefore 位于句首或者位于谓语动词附近
-            - His analysis should therefore end any self-contentedness(指“对自己太满意、安于现状”的心态 -> 自满、自得).
+            - His analysis([əˈnæləsɪs]) should therefore end any self-contentedness(指“对自己太满意、安于现状”的心态 -> 自满、自得).
             - Therefore, it is important to study humans.
 - ladder [ˈlædər]
     - n. 梯子；阶梯；途径
