--- a/english/word/simple-word/markdown/p45-p47.md
+++ b/english/word/simple-word/markdown/p45-p47.md
@@ -13,6 +13,7 @@
     - poisonous [ˈpɔɪzənəs] adj. 有毒的
 - shine [ʃaɪn]
     - vi. 照耀，发光
+    - sky [ʃaɪ] adj. 害羞的
 - forty
 - repeatedly
     - adv. 一再，再三
@@ -53,13 +54,13 @@
     - berry n. 浆果; 莓
 - Wednesday
 - craze [krez]
-    - n. 狂热；**风行一时的东西**
+    - n. **风行一时的东西**；狂热
     - The craze is sweeping over Japan.
     - crazy [ˈkreɪzi] adj. 疯狂的
 - mouse
     - n. 老鼠，鼠标；胆小怯懦的人；
     - rat
-- cruelty  [ˈkruːəlti]
+- cruelty [ˈkruːəlti]
     - n. 残忍，残酷，不公
     - ...demonstrate([ˈdemənstreɪt] 证明) the cruelty of slavery([ˈsleɪvəri] 奴隶制) in his days.
     - cruel adj. 残忍的
@@ -89,8 +90,8 @@
     - adj. 令人不舒服的
 - haze [heɪz]
     - n. 霾；雾，薄雾
-    - fog
-    - foggy adj. 有雾的
+    - fog [fɑːɡ] n. 雾
+    - foggy [ˈfɑːɡi] adj. 有雾的
 - coat [koʊt]
     - vt. 覆盖，遮盖 n. 上衣，外套
     - cover v. 覆盖
@@ -98,7 +99,7 @@
     - v./n. 巡逻
 - super
 - roundabout [ˈraʊndəbaʊt]
-    - adj. 迂回的； n. 环岛
+    - adj. 迂回的；n. 环岛
 - couch
     - n. 长沙发
     - ...his wife sat silently beside him on the couch.
@@ -129,7 +130,7 @@
     - n. 重建，改造；复原
     - construct v. 建造；构造；n. 建筑物
     - structure n. 结构
-- pizza
+- pizza [ˈpiːtsə]
     - 比萨饼
 - script
     - v. 剧本化，为...写剧本；n. 剧本；广播稿
@@ -137,7 +138,7 @@
     - We have designed jobs that tend to be "tightly scripted" and "highly standardised" ones.
 - charity
     - n. 慈善事业
-    - Buying gifts or giving to charity is often more pleasurable than purchasing things for oneself.
+    - Buying gifts or giving to charity is often more pleasurable than purchasing([ˈpɜːrtʃəs] n. 购买) things for oneself.
 - proudly
     - adv. 自豪地，得意地
     - proud: be proud of
@@ -164,7 +165,7 @@
     - n. **休息室**；v. 闲逛
 - separately [ˈsɛpərɪtlɪ]
     - adv. 分别地，单独地
-    - In fact，all of these cultural developments occurred separately.
+    - In fact，all of these cultural developments occurred([əˈkɜːr]v. 发生) separately.
     - separate adj. 分别的，单独的
 - certainty [ˈsɜːrtnti]
     - n. 确定
@@ -264,7 +265,7 @@
     - n. 激动，兴奋
 - quantitative [ˈkwɑːntəteɪtɪv]
     - adj. 量的，定量的
-    - We need to do some quantitative analysis of the drugs
+    - We need to do some quantitative analysis([əˈnæləsɪs]) of the drugs
     - quantity n. 数量
     - quality n. 质量
 - genre [ˈʒɑːnrə]
@@ -280,7 +281,7 @@
     - line graph 线状图
     - pie graph 饼状图
     - bar/column graph 柱状图
-- wine
+- wine [waɪn]
     - n. 葡萄酒
     - wine berry = grape 葡萄
 - peace
@@ -293,7 +294,7 @@
     - cow n. 母牛
     - milk cow 奶牛
 - richly [ˈrɪtʃli]
-    - adv. 富丽堂皇对，色彩鲜艳富丽地；口味醇美地；气味浓郁芬芳地
+    - adv. 富丽堂皇地，色彩鲜艳富丽地；口味醇美地；气味浓郁芬芳地
     - rich
 - session
     - n. 会议，开庭；学期
