--- a/english/word/simple-word/markdown/p6-p8.md
+++ b/english/word/simple-word/markdown/p6-p8.md
@@ -142,7 +142,7 @@
     - n. 课程(一节课，course 一门课, curriculum [kəˈrɪkjələm] 完整课程体系)
     - **n. 阶级，等级**: social class, middle class
     - **v. 分等级**: It can hardly be classed as Literature([ˈlɪtrətʃər] n. 文学; 著作).
-    - classic adj. 典型的 n. 典型: a classic case of "paralysis by analysis"
+    - classic adj. 典型的 n. 典型: a classic case of "paralysis by analysis([əˈnæləsɪs])"
     - classical adj. 经典的，古典的: It has been the talk of the classical-music world.
 - low
 - face
