--- a/english/word/simple-word/markdown/p21-p23.md
+++ b/english/word/simple-word/markdown/p21-p23.md
@@ -400,7 +400,7 @@
         - a large quantity of clothes 大量衣服
         - large quantities of CO2 大量的二氧化碳
     - quantitative adj. 量的；定量的
-        - We need to do some quantitative analysis of the drugs.
+        - We need to do some quantitative analysis([əˈnæləsɪs]) of the drugs.
 - ten
 - chair
     - n. 椅子；主席；vt. 主持会议
