--- a/english/word/simple-word/markdown/p3-p5.md
+++ b/english/word/simple-word/markdown/p3-p5.md
@@ -1,12 +1,12 @@
 # P3-P5
 
 - way
-    - vi/vey- 路
-        - via 经过
-        - previous adj. 以前的
     - n. 方法，路线
+    - vi/vey- 路
+        - via [ˈviːə] prep. 经过
+        - previous adj. 以前的
 - how
-    - 多么, +adj.: how beautiful she is
+    - 多么, +adj.: how beautiful she is.
 - job
     - 前缀影响感情色彩，尾缀影响词性
     - jobless adj. 失业的
@@ -19,11 +19,11 @@
     - childbirth n. 分娩，生孩子
     - childcare n. 儿童保育，儿童照管
 - long
-    - adj. 长的 
+    - adj. 长的
     - 渴望: long for return
 - paragraph [ˈpærəɡræf]
     - n. 段落
-    - paraphrase [ˈpærəfreɪz]  n. 注释，释义； v. 解释
+    - paraphrase [ˈpærəfreɪz] n. 注释，释义；v. 解释
 - give
 - even
     - adv. 甚至； adj. 均匀的
@@ -64,9 +64,9 @@
     - lifestyle n. 生活方式，工作方式
     - lifetime n. 一生，终身
 - lift
+    - vt. 举起 n. 电梯(英式)
+    - elevator (美式)电梯
     - lev- 举，轻
-    - vt. 举起
-    - n. 电梯(英式) vs elevator（美式）
     - He is strong enough to lift a car.
 - also
 - first
@@ -85,12 +85,14 @@
 - me
 - help
 - just
-    - adj. 公正的； adv.正好；仅仅；刚才
-    - justice n. 公平，正义 
+    - adj. 公正的；adv.正好；仅仅；刚才
+    - justice [ˈdʒʌstɪs] n. 公平，正义
     - justify v. 证明...正义；为...辩护
 - over
     - prep. 在...上方；在...期间（during）
-    - prep.: the dog over the bed, over the past decade
+    - prep.
+        - the dog over the bed
+        - over the past decade
 - she
 - study
     - v. 研究
@@ -118,7 +120,8 @@
 - great
     - adj. 擅长的；极好的；大量的
     - adj. 大量的: a great number of
-    - greatly adv. 非常，很，大大地: Social class greatly helps enrich educational experiences.
+    - greatly adv. 非常，很，大大地
+        - Social class greatly helps enrich educational experiences.
     - greatness n. 伟大
 - school
 - student
@@ -130,13 +133,14 @@
 - problem
 - see
     - 看（强调看到的结果）
-    - see...as 把...视为: I see you as my best friend.
+    - see...as 把...视为
+        - I see you as my best friend.
 - look
     - 看（强调看的动作）
     - 容貌: popularity of certain looks, brands, or neighborhoods.
 - any
     - det. 任何的: any people, any apples, any a book
-    - adv. 用于否定句或疑问句当中表示一点也不: She didn't do any learning thing today.
+    - adv. 用于*否定句*或*疑问句*当中表示**一点也不**: She didn't do any learning thing today.
 - seem
     - link v. 似乎，好像 +adj.: it seems silly to stay back a year.
     - vi. +to do: The similar genes seem to be evolving faster than other genes.
@@ -146,7 +150,7 @@
     - too...to 太...不能: A job's starting salary seems too small to satisfy an emerging adult.
 - last
     - adj. 最近的；最后的； adv. 上一次；最后； v. 持续
-    - 与过去时连用，adj. 最近的 adv. 上一次: Its lawmakers gave <u>preliminary</u>（初步的） approval last week to a law.
+    - 与过去时连用，adj. 最近的 adv. 上一次: Its lawmakers gave <u>preliminary(初步的)</u> approval last week to a law.
     - What does the author argue in the last paragraph?
     - v.: Formerly it lasted three days...
 - before
@@ -200,18 +204,18 @@
 - while
     - conj. 尽管(位于句首): While their parents were content to work long hours young people value flexibility.
     - conj. 当...的时候(+doing): saving them money while helping eh environment.
-    - conj. 然而(位于句中): They can smell one type of flower but not another, while others are <u>sensitive</u>（敏感的） to the smells
-      of both flowers.
+    - conj. 然而(位于句中): They can smell one type of flower but not another, while others are <u>sensitive(敏感的)</u> to the smells of both flowers.
 - age
     - 时代: digital age, age of AI
 - want
     - van- 空
-        - vanish v. 消失
+        - vanish [ˈvænɪʃ] v. 消失
         - vanity n. 虚荣心
     - vt.: You might want to gather your army first.
 - idea
     - ideal adj. 理想的: Mauna Kea is deemed as an ideal astronomical([ˌæstrəˈnɑːmɪkl] adj. 天文学的; 极其巨大的) side.
-    - idealized adj. 理想的: They portray an idealized version of themselves.
+    - idealized [aɪˈdɪəlˌaɪzd] adj. 理想的: They portray([pɔːrˈtreɪ] v. 扮演（角色）; 描述; 描绘; 表现) an idealized
+      version of themselves.
 - family
     - Father And Mother I Love You.
 - university
@@ -223,8 +227,7 @@
     - kindness n. 仁慈，友好的行为
 - yet
     - adv. 仍然: Virtual reality haven't been invented yet.
-    - conj. 然而: Adult women do not remember being so obsessed with the colour, yet it is pervasive in our young girls'
-      lives.
+    - conj. 然而: Adult women do not remember being so obsessed with the colour, yet it is pervasive in our young girls' lives.
 - far
     - further, furthest
 - large
@@ -253,12 +256,12 @@
     - interest rate 利率
 - both
     - 两者都
-    - neither  两者都不
+    - neither 两者都不
 - century
-    - cent- 百
     - n. 世纪，百年
+    - cent- 百
 - English
-- home 
+- home
     - n. 家，家乡
 - line
     - n. 界限: whether there is still a line between the court and politics.
@@ -266,14 +269,14 @@
     - adv. 相当: Their work makes a rather startling assertion.
     - adv. 宁可: Kids would rather play (then study).
         - would rather A (than B): 宁愿A（也不愿B）
-    - rather than: Good memory results from <u>intuitive</u>（天生的） rather than exercises.
-        - **A rather than B: 是A而不是B**
+    - **A rather than B: 是A而不是B**
+        - Good memory results from <u>intuitive(天生的)</u> rather than exercises.
 - same
 - less
     - little 比较级
 - worker
 - grow
-    - vi. 生长 ；变得，发展； vt. 种植
+    - vi. 生长 ；变得，发展；vt. 种植
     - link v. 变得
     - grew, grown
     - **growth** n. 成长，增长
@@ -294,8 +297,8 @@
     - prep. 逆着；反对
     - Fly against the wind again and again.
 - start
-    - start（动作） - stop
-    - begin （时间）- end
+    - start(动作) - stop
+    - begin(时间) - end
     - Would you mend my car？I can not begin/start it.
 - number
     - No.
@@ -314,10 +317,8 @@
 - feel
     - felt, felt
 - **instead**
-    - adv. 反而(表递进): The french tax is not just a unilateral. Instead, the digital services tax is part of a much
-      larger trend.
-    - adv. 代替: Buy all your clothes at once with a stylist instead of <u>shopping</u> alone, one article of clothing
-      at a time.
-        - A instead of B/A rather than b: 是A而不是B
+    - adv. 反而(表递进): The french tax is not just a unilateral. Instead, the digital services tax is part of a much larger trend.
+    - adv. 代替: A instead of B/A rather than b: 是A而不是B
+        - Buy all your clothes at once with a stylist instead of <u>shopping</u> alone, one article of clothing at a time.
 - off
     - adv. 离(开): 10% off, take off, turn off/on
